welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:8: error: not found: value avant
	avant(4)
        ^Runner:10: error: not found: value avant
	avant(2)
        ^Runner:12: error: not found: value avant
	avant(4)
        ^