welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
/*l faut faire quatre pas en avant, deux pas à gauche, 
quatre pas à droite, deux pas à droite, et quatre pas à gauche.
Il faut faire 7 tours de circuit.*/


for (k <- 1 to 7){
	avant(4)
	gauche()
	avant(2)
	droite()
	avant(4)
	
	
}
